Agregar iconos  a imagen

--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
             </div>
             <div class="content_card">
                 <div class="image_main">
-                    <img class="full_w" src="main.png">
+                    <img class="full_w hand" src="main.png">
+                    <img class="hearth" src="icon.png">
+                    <img class="profile" src="icon2.png">
+                    <img class="hearth_msg" src="icon3.png">
+                    <img class="comment_msg" src="icon4.png">
                     <div class="brush">
                         <!-- <div class="shape"></div> -->
                     </div>
