--- a/index2.html
+++ b/index2.html
@@ -9,6 +9,25 @@
 </head>
 <body>
     <div class="container">
+        <div class="card">
+            <div class="left_card">
+                <div class="logo_header">
+                    <img src="logo_50.png" class="logo" >
+                </div>
+                <div class="images_main">
+                    <img src="_Group_.png" >
+                    <div class="svgs">
+                        <img src="_Group_.svg" >
+                    </div>
+                </div>
+            </div>
+            <div class="right_card">
+                <div class="w-80">
+                    <h1>Agrega tu número para poder continuar</h1>
+                    <input class="tel" type="text" placeholder="Número de teléfono">
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
