--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Propuesta</title>
-    <link rel="stylesheet" href="estilo.css?v">
+    <link rel="stylesheet" href="css/estilo.css?v">
 </head>
 <body>
     <div class="container">
@@ -16,11 +16,11 @@
             </div>
             <div class="content_card">
                 <div class="image_main">
-                    <img class="full_w hand" src="main.png">
-                    <img class="hearth" src="icon.png">
-                    <img class="profile" src="icon2.png">
-                    <img class="hearth_msg" src="icon3.png">
-                    <img class="comment_msg" src="icon4.png">
+                    <img class="full_w hand" src="img/main.png">
+                    <img class="hearth" src="img/icon.png">
+                    <img class="profile" src="img/icon2.png">
+                    <img class="hearth_msg" src="img/icon3.png">
+                    <img class="comment_msg" src="img/icon4.png">
                     <div class="brush">
                         <!-- <div class="shape"></div> -->
                     </div>
