--- a/index2.html
+++ b/index2.html
@@ -95,6 +95,19 @@
                             </div>
                         </div>
                     </div>
+                    <div class="cerdit_card back_card" style="margin-top: 2em;">
+                        <div class="dark_line">
+
+                        </div>
+                        <div class="cvv">
+                            <span>236</span>
+                        </div>
+                        <div class="credit_header">
+                            <div class="bank_name">
+                                <img src="img/visa.png">
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="w-90">
                     <div class="form_content">
