credit card hidden show

--- a/index2.html
+++ b/index2.html
@@ -95,7 +95,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="cerdit_card back_card" style="margin-top: 2em;">
+                    <div class="cerdit_card back_card hidden">
                         <div class="dark_line">
 
                         </div>
