--- a/index2.html
+++ b/index2.html
@@ -100,7 +100,7 @@
 
                         </div>
                         <div class="cvv">
-                            <span>236</span>
+                            <span>***</span>
                         </div>
                         <div class="credit_header">
                             <div class="bank_name">
