--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                             </div>
                         </div>
                         <div class="button">
-                            <a href="javascript:void(0);" class="btn_next">Siguiente</a>
+                            <a href="javascript:void(0);" id="btn_next" class="btn_next">Siguiente</a>
                         </div>
                     </div>
                 </div>
