--- a/index2.html
+++ b/index2.html
@@ -72,8 +72,8 @@
                     <img src="img/visa.png">
                   </div>
                 </div>
-                <div class="card_numbers">
-                  <div class="group_numbers"> **** </div>
+                <div class="card_numbers showed">
+                  <div class="group_numbers "> **** </div>
                   <div class="group_numbers"> **** </div>
                   <div class="group_numbers"> **** </div>
                   <div class="group_numbers"> **** </div>
