--- a/index2.html
+++ b/index2.html
@@ -181,6 +181,16 @@
           </div>
         </div>
       </div>
+      <div class="backdrop_modal">
+        <div class="modal">
+            <div class="top_modal">
+                <div class="loader green_load"></div>
+            </div>
+            <div class="modal_content">
+                Procesando pago...
+            </div>
+        </div>
+      </div>
   </body>
   <script src="js/jquery.js"></script>
   <script src="js/main.js"></script>
