--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Propuesta</title>
     <link rel="stylesheet" href="css/estilo.css?v">
+    <link rel="stylesheet" href="css/responsive.css">
 </head>
 <body>
     <div class="container">
