validar num ingresado y offerta

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <div class="loader green_load"></div>
             </div>
             <div class="modal_content">
-                Procesando pago...
+                Buscando tu número...
             </div>
         </div>
       </div>
