cambio version js y css

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Propuesta</title>
-    <link rel="stylesheet" href="css/estilo.css?v">
+    <link rel="stylesheet" href="css/estilo.css?v=">
     <link rel="stylesheet" href="css/responsive.css">
 </head>
 <body>
@@ -73,5 +73,5 @@
       </div>
 </body>
 <script src="js/jquery.js"></script>
-<script src="js/main.js"></script>
+<script src="js/main.js?"></script>
 </html>
