--- a/index.html
+++ b/index.html
@@ -73,5 +73,5 @@
       </div>
 </body>
 <script src="js/jquery.js"></script>
-<script src="js/main.js?v"></script>
+<script src="js/main.js?v1"></script>
 </html>
