cambio alertas por alertify

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Propuesta</title>
     <link rel="stylesheet" href="css/estilo.css?v=1">
     <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="alertifyjs/css/alertify.css">
+    <link rel="stylesheet" href="alertifyjs/css/themes/default.css">
+    <link rel="stylesheet" href="alertifyjs/css/themes/bootstrap.min.css">
 </head>
 <body>
     <div class="container">
@@ -86,5 +89,6 @@
       </div>
 </body>
 <script src="js/jquery.js"></script>
+<script src="alertifyjs/alertify.min.js"></script>
 <script src="js/main.js?v1.1"></script>
 </html>
